Added browsing section to index.pug.

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,8 +5,9 @@ block content
   p Welcome to B-hive's #[strong HarvestHub], the online home of HarvestEye.
 
   if loggedIn
-    h2 Welcome Again!
-    p You're already logged in.
+    h2 Browse Data
+    ul
+      li #[a(href="/asis/Grower") Growers].
 
   else
     h2 Log In
