--- a/views/asis.pug
+++ b/views/asis.pug
@@ -3,11 +3,14 @@ extends layout
 block content
   h1=title
 
-  table
-    tr
-      for column in data.columns
-        th=column
-    for row in data.rows
+  if data == null
+    p #[i This table contains no data as yet.]
+  else
+    table
       tr
-        for item in row
-          td=item
+        for column in data.columns
+          th=column
+      for row in data.rows
+        tr
+          for item in row
+            td=item
