--- a/views/tabular.pug
+++ b/views/tabular.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1=title
+  h1 !{title}
 
   if data == null
     p #[i This table contains no data as yet.]
@@ -9,7 +9,7 @@ block content
     table
       tr
         for column in data.columns
-          th=column
+          th !{column}
       for row in data.rows
         tr
           for item in row
