Still adding upload pages to BoxEye components.

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,34 @@ block content
     ul
       li #[a(href="/asis/Grower") Growers].
 
+    h2 BoxEye Components
+    h3 Browse Tables
+    ul
+      li #[a(href="/boxeyecomponents/BoxEyeRig") BoxEyeRig],
+      li #[a(href="/boxeyecomponents/ArduinoReader") ArduinoReader],
+      li #[a(href="/boxeyecomponents/Antenna") Antenna].
+    h3 Upload to Tables
+    ul
+      li #[a(href="/boxeyecomponents/upload2/BoxEyeRig")
+           Upload to BoxEyeRig],
+      li #[a(href="/boxeyecomponents/upload2/ArduinoReader")
+           Upload to ArduinoReader],
+      li #[a(href="/boxeyecomponents/upload2/Antenna")
+           Upload to Antenna].
+    h3 Logs
+    h4 Browse
+    ul
+      li #[a(href="/boxeyecomponents/upload2/BoxEyeRigLog") BoxEyeRigLog],
+      li #[a(href="/boxeyecomponents/upload2/ArduinoReaderLog")
+           ArduinoReaderLog],
+      li #[a(href="/boxeyecomponents/upload2/AntennaLog") AntennaLog].
+    h4 Update
+    ul
+      li #[a(href="/boxeyecomponents/append2/BoxEyeRigLog") BoxEyeRigLog],
+      li #[a(href="/boxeyecomponents/append2/ArduinoReaderLog")
+           ArduinoReaderLog],
+      li #[a(href="/boxeyecomponents/append2/AntennaLog") AntennaLog].
+
   else
     h2 Log In
     p Please log in below.
