Still adding upload pages to BoxEye components.

--- a/views/aftersql.pug
+++ b/views/aftersql.pug
@@ -15,4 +15,4 @@ block content
       p #{error}
 
   h2 What Next?
-  p Back to #[a(href="/uploads") uploads].
+  p Back to the #[a(href="/") home page].
