--- a/views/index.pug
+++ b/views/index.pug
@@ -9,22 +9,9 @@ block content
     ul
       li #[a(href="/asis/Grower") Growers].
 
-    h2 BoxEye Components
-    h3 Browse Tables
+    h2 Other Useful Links
     ul
-      li #[a(href="/boxeyecomponents/BoxEyeRig") BoxEyeRig],
-      li #[a(href="/boxeyecomponents/ArduinoReader") ArduinoReader],
-      li #[a(href="/boxeyecomponents/Antenna") Antenna].
-    h3 Upload to Tables
-    ul
-      li #[a(href="/boxeyecomponents/upload2/BoxEyeRig") Upload to BoxEyeRig],
-      li #[a(href="/boxeyecomponents/upload2/ArduinoReader") Upload to ArduinoReader],
-      li #[a(href="/boxeyecomponents/upload2/Antenna") Upload to Antenna].
-    h3 Logs
-    ul
-      li #[a(href="/boxeyecomponents/BoxEyeRigLog") BoxEyeRigLog],
-      li #[a(href="/boxeyecomponents/ArduinoReaderLog") ArduinoReaderLog],
-      li #[a(href="/boxeyecomponents/AntennaLog") AntennaLog].
+      li #[a(href="/boxeyecomponents") BoxEye Components section].
 
   else
     h2 Log In
