--- a/views/tabular.pug
+++ b/views/tabular.pug
@@ -13,7 +13,10 @@ block content
       for row in data.rows
         tr
           for item in row
-            td !{item}
+            if item == null
+              td #[i Nil]
+            else
+              td !{item}
 
   if note
     p !{note}
