--- a/views/logtable.pug
+++ b/views/logtable.pug
@@ -27,7 +27,10 @@ block content
       for row in data.rows
         tr
           for item in row
-            td !{item}
+            if item == null
+              td #[i Nil]
+            else
+              td !{item}
 
   p !{note}
 
