--- a/views/logtable.pug
+++ b/views/logtable.pug
@@ -14,7 +14,10 @@ block content
       for row in itemData.rows
         tr
           for item in row
-            td !{item}
+            if item == null
+              td #[i Nil]
+            else
+              td !{item}
 
   h2 The Logs
   if data == null
