--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ block content
     ul
       li #[a(href="/asis/Grower") Growers].
 
-    h2 Other Useful Links
+    h2 Other Useful Links --
     ul
       li #[a(href="/boxeyecomponents") BoxEye Components section].
 
