Still experimenting with finaliser.js.

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,9 +9,12 @@ block content
     ul
       li #[a(href="/asis/Grower") Growers].
 
-    h2 Other Useful Links --
+    h2 Other Useful Links
     ul
       li #[a(href="/boxeyecomponents") BoxEye Components section].
+
+    h3 Testing Replacements
+    p `` '' ` ' --- --
 
   else
     h2 Log In
