--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,4 +8,4 @@ html
     block content
     footer
       br
-      p Property of #[a(href="https://www.b-hiveinnovations.co.uk/") B-hive Innovations] | Accessed: #{footstamp} | #[a(href="/") Home] | #[a(href="/logout") Log out] | For support, contact: #[i thosker@b-hiveinnovations.co.uk]
+      p Property of #[a(href="https://www.b-hiveinnovations.co.uk/") B-hive Innovations] | Accessed: #{footstamp} | #[a(href="/") Home] | #[a(href="/logout") Log out] | For support, contact: #[i thosker@b-hiveinnovations.co.uk] !{secretLink}
